# pokemon_db

./: README.md
crates/upload-pokemon-data/: Cargo.toml
crates/upload-pokemon-data/src/: db.rs  main.rs  pokemon_csv.rs
